zinkin-oc-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zinkin
  namespace: zinpkin-app
spec:
  selector:
    matchLabels:
      app: zinkin
  replicas: 3
  template:
    metadata:
      labels:
        app: zinkin
    spec:
      containers:
        - name: hello-openshift
          image: image-registry.openshift-image-registry.svc:5000/zinpkin-app/zinkin
          ports:
            - containerPort: 9411
