zinkin-oc.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: '2019-05-26T14:16:36Z'
  generation: 2
  labels:
    app: zinkin
  name: zinkin
  namespace: zinkin-app
  resourceVersion: '692538'
  selfLink: /apis/apps.openshift.io/v1/namespaces/zinpkin-app/deploymentconfigs/zinkin
  uid: def14de2-7fc0-11e9-acbd-0a1d4167cb58
spec:
  replicas: 1
  selector:
    app: zinkin
    deploymentconfig: zinkin
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      creationTimestamp: null
      labels:
        app: zinkin
        deploymentconfig: zinkin
    spec:
      containers:
        - image: >-
            docker-registry.default.svc:5000/zinkin-app/zinkin
          imagePullPolicy: Always
          name: zinkin
          ports:
            - containerPort: 9411
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - zinkin
        from:
          kind: ImageStreamTag
          name: 'zinkin:latest'
          namespace: zinpkin-app
        lastTriggeredImage: >-
          docker-registry.default.svc:5000/zinpkin-app/zinkin
      type: ImageChange
status:
  availableReplicas: 1
  details:
  latestVersion: 1
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  unavailableReplicas: 0
  updatedReplicas: 1
