zinkin-service-oc.yml
  
kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 9411
    nodePort: 0
  selector:
    app: zinkin
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
