zinkin-route-oc.yml
kind: Route
apiVersion: v1
metadata:
  name: frontend
spec:
  to:
    kind: Service
    name: frontend
